[package]
name = "bevy-survivor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# remove dynamic_linking for release
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
iyes_perf_ui = "0.2.3"
rand = "0.9.0-alpha.1"
bytemuck = "1.15.0"
bevy_rapier3d = { version = "0.25.0", features = ["simd-stable", "debug-render-3d", "parallel"] }


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
